# ai-agent-sample

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  buildspec.yml  pyproject.toml
src/ai_agent_sample/: main.py
src/ai_agent_sample/agent/: core.py
src/ai_agent_sample/llm/: bedrock.py  mock.py
src/ai_agent_sample/scripts/: http_request.py  prepare_check.py
