[project]
name = "ai-agent-sample"
version = "0.1.0"
description = "AI agent sample project"
authors = [
    {name = "shibata tetsu",email = "kiitansakura@icloud.com"}
]
readme = "README.md"

package = [
    { include = "ai_agent_sample", from = "src"}
]

requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "boto3 (>=1.42.36,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "ruff (>=0.14.14,<0.15.0)"
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
